--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -29,6 +29,7 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    needs: build
 
     steps:
       - name: Run Tests using Gradle Wrapper
@@ -37,6 +38,7 @@ jobs:
   upload_artifact:
     name: Artifact
     runs-on: ubuntu-latest
+    needs: [build, test]
 
     steps:
       - name: Build with Gradle
