--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -32,6 +32,11 @@ jobs:
     needs: build
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
       - name: Run Tests using Gradle Wrapper
         run: ./gradlew test --no-daemon
 
@@ -41,6 +46,11 @@ jobs:
     needs: [build, test]
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
       - name: Build with Gradle
         run: ./gradlew assemble
 
